# setup_creator

./: .flake8  .gitignore  .gitlab-ci.yml  poetry.toml  pyproject.toml  sonar-project.properties
setup_creator/: __main__.py  setting.py
setup_creator/lzh/: cpp32.py  cpp64.py
tests/: test_lzh.py  test_main.py  test_setting.py  test_setup_creator.py
tests/data/: test.toml
