[tool.poetry]
name = "setup_creator"
version = "0.1.0"
description = ""
authors = ["K0GiHF9S <kidoairakusyunkasyuutou@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
setup_creator = "setup_creator.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
