[tool.poetry]
name = "setup_creator"
version = "0.1.0"
description = ""
authors = ["K0GiHF9S <kidoairakusyunkasyuutou@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
setup_creator = "setup_creator.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
toml = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-datadir = "*"
autopep8 = "*"
coverage = { extras = ["toml"], version = "*" }
pytest-html = "*"
black = "*"
flake8 = "*"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.coverage.run]
branch = true
source = ["."]
omit = [".venv/*", "tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
